[gd_scene load_steps=7 format=2]

[ext_resource path="res://Testando/Testse.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/Xilo.tres" type="Theme" id=2]
[ext_resource path="res://Assets/Images/Peixes/piaba_v003_001.png" type="Texture" id=3]
[ext_resource path="res://Testando/Node2D.gd" type="Script" id=4]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.0

[sub_resource type="CircleShape2D" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )
speed = 300

[node name="RigidBody2D" type="RigidBody2D" parent="."]
position = Vector2( 200, 540 )
mass = 0.01
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
sleeping = true
linear_damp = 0.0
angular_damp = 0.0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
shape = SubResource( 2 )

[node name="piaba_v003_001" type="Sprite" parent="RigidBody2D"]
texture = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="RigidBody2D"]

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="Label" type="Label" parent="."]
margin_left = 455.377
margin_top = 291.328
margin_right = 587.377
margin_bottom = 343.328
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Tempo"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 967.322
margin_top = 291.328
margin_right = 1007.32
margin_bottom = 305.328
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Tempo"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_left = 1431.18
margin_top = 291.328
margin_right = 1563.18
margin_bottom = 343.328
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Tempo"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="."]
margin_left = 704.0
margin_top = 159.0
margin_right = 904.0
margin_bottom = 179.0
rect_scale = Vector2( 3, 3 )
max_value = 1.0
step = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="Timer" to="RigidBody2D" method="_on_Timer_timeout"]
